--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -120,7 +120,7 @@
                 android:layout_marginStart="100dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/eat2"
+                android:background="@drawable/eat_hear_xml"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -134,7 +134,7 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="100dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/takeout2"
+                android:background="@drawable/take_out_xml"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
