--- a/app/src/main/res/layout-land/activity_small_menu_page1_1.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page1_1.xml
@@ -31,7 +31,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-        app:layout_constraintTop_toTopOf="@+id/user_shop_name" />
+        app:layout_constraintTop_toTopOf="@+id/small_menu_name" />
 
     <Button
         android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/user_shop_name"
+        android:id="@+id/small_menu_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:fontFamily="@font/nanumsquareneo_bold"
